<resources>
    <string name="app_name">Navigation Practive</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_money">Send Money</string>
    <string name="check_balance">Check Balance</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_number">Enter Number</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="bt_confirm">Confirm Send</string>
    <string name="tv_success">Success</string>
    <string name="bt_sendAgain">Send Again</string>
    <string name="bt_goMenU">Go MenU</string>

</resources>